--- a/src/app/partials/main/main.component.scss
+++ b/src/app/partials/main/main.component.scss
@@ -1,21 +1,37 @@
 .body {
-  width: calc(100% - 5rem);
-  margin-left: 5rem;
+//   width: calc(100% - 5rem);
+  margin-left: 2rem;
   z-index: 0;
   position: relative;
   top: 0;
   transition: all 0.5s ease;
 //   background: #f4f7fa;
-  padding: 3rem;
-  height: 100vh;
+  background-image: url("/techbg.png");
+  
+  background-repeat:repeat;
+  // background-position: 0;
+  background-size: 200px;
+  // background-repeat: no-repeat;
+  // padding-top: 1rem;
+//   padding: 3rem;
+  padding-left: 5rem;
+  padding-bottom: 6rem;
+  min-height: 100vh;
+  height: auto;
 }
 
 .body-trimmed {
-  width: calc(100% - 18.5625rem);
-  margin-left: 18.5625rem;
+//   width: calc(100% - 18.5625rem);
+  padding-left: 18.5625rem;
 }
 
 .body-md-screen {
   width: calc(100% - 5rem);
   margin-left: 5rem;
+}
+
+@media screen and (max-width: 500px) {
+  .body {
+    padding-left: 3rem;
+  }
 }
