--- a/src/app/partials/sidebar-menu/sidebar-menu.component.scss
+++ b/src/app/partials/sidebar-menu/sidebar-menu.component.scss
@@ -64,7 +64,6 @@
     flex-direction: column;
     align-items: center;
     height: calc(100% - 3.65rem);
-    cursor: pointer;
 }
 .sidenav-nav .sidenav-nav-item {
     width: 100%;
@@ -94,10 +93,19 @@
     color: #E6E6E6;
 }
 
+.sidenav-nav-item:last-child {
+    position: absolute; 
+    bottom: 0;
+}
+
 .active {
     background-color: #37003C;
 }
 .active .sidenav-link-icon,
 .active .sidenav-link-text {
     color: #fff;
+}
+
+.hide {
+    display: none;
 }
