--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     margin: 0;
     // overflow-x: hidden;
-
+    // font-family: "Roboto", Helvetica, Arial, sans-serif;
     background-color: #12001A;
     color: #fff;
 }
-
+* {
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+}
 *:focus {
     box-shadow: 0.063rem 0 1rem 0 gold;
 }
