--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,17 +1,3 @@
-.dashboard-container {
-    padding-top: 6rem;
-    width: 75rem;
-    max-width: 95%;
-    margin: 0 auto;
-}
-
-.dashboard-frame {
-    padding: 1.5rem;
-    border-radius: 1rem;
-    background-color: #1b0020bb;
-    box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
-}
-
 .items {
     list-style: none;
     margin: 0;
@@ -50,6 +36,7 @@
         }
         .icon {
             max-width: 50%;
+            aspect-ratio: 1/1;
         }
     }
 }
