--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,11 @@ body {
 *:focus {
     box-shadow: 0.063rem 0 1rem 0 gold;
 }
+
+h2 {
+    justify-self: center;
+}
+
 label {
     display: flex;
     flex-direction: column;
@@ -33,10 +38,91 @@ textarea {
 select {
     padding: 0;
     text-align: center;
+    cursor: pointer;
 }
 select:focus {
     border-bottom-left-radius: 0rem;
     border-bottom-right-radius: 0rem;
+}
+small {
+    font-size: 0.65rem;
+    white-space: nowrap;
+    text-align: center;
+}
+button {
+    width: fit-content;
+    height: 2rem;
+
+    padding: 0.5rem 2rem 0.5rem 2rem;
+
+    color: #fff;
+    background-color: rgba(255, 217, 0, 0.253);
+
+    border: none;
+
+    white-space: nowrap;
+
+    transition: background-color 0.2s ease-in-out;
+
+    cursor: pointer;
+    &:hover {
+        background-color: rgba(255, 217, 0, 0.397);
+    }
+
+    &:active {
+        background-color: rgba(255, 217, 0, 0.685);
+    }
+    &:disabled {
+        background-color: rgba(255, 217, 0, 0.103);
+        cursor: default;
+    }
+}
+
+.pagination-controls {
+    max-width: fit-content;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    white-space: nowrap;
+    height: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0.063rem 0 1.25rem 0 gold;
+
+    button {
+        flex: 1;
+        
+        border: none;
+        
+        height: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+     p {
+        height: 2rem;
+        padding: 0 1rem 0 1rem;
+        display: flex;
+        align-items: center;
+        
+        background-color: rgba(255, 217, 0, 0.253);
+        border-left: none;
+        border-right: none;
+    }
+
+    .previous {
+        border-top-left-radius: 1rem;
+        border-bottom-left-radius: 1rem;
+    }
+
+    .next {
+        border-top-right-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+    }
 }
 
 .back {
@@ -45,4 +131,35 @@ select:focus {
 }
 .timestamp {
     font-size: 0.7rem;
+}
+
+.dashboard-container {
+    padding-top: 6rem;
+    width: 75rem;
+    max-width: 95%;
+    margin: 0 auto;
+
+    .dashboard-frame {
+        padding: 1.5rem;
+        border-radius: 1rem;
+        background-color: #1b0020bb;
+        box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
+    }
+}
+
+.filter {
+    margin-top: 1rem;
+   
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+
+    select {
+        width: 10rem;
+        max-width: 95%;
+    }
+}
+
+.loading {
+    text-align: center;
 }
